--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Hello world, I'm PeterFalcon.</h1>
 <p>I'm going to try my best to be a sysadmin one day.</p>
+<p>Currently using Windows 10. Hoping to use Arch Linux full time one day.</p>
 </body>
 </html>
